# decision-agent

./: .gitignore  AGENTS.md  MIGRATION_SUMMARY.md  O11Y_MIGRATION_GUIDE.md  O11Y_QUICK_REF.md  README.md  README.zh.md  changelog.md  changelog.zh.md
agent-backend/agent-executor/: .gitignore  Makefile  agent-executor.spec  main.py  pyproject.toml
agent-backend/agent-executor/app/common/: config.py
agent-backend/agent-executor/app/common/exceptions/: dolphin_sdk_exception.py  tool_interrupt.py
agent-backend/agent-executor/app/common/tool_v2/: agent_tool.py  api_tool.py  common.py  tool.py
agent-backend/agent-executor/app/config/: builtin_ids_class.py
agent-backend/agent-executor/app/config/config_v2/: config_initializer.py
agent-backend/agent-executor/app/driven/anyshare/: docset_service.py  open_doc_service.py
agent-backend/agent-executor/app/driven/dip/: agent_operator_integration_service.py  data_connection_service.py
agent-backend/agent-executor/app/logic/: file_service.py
agent-backend/agent-executor/app/logic/agent_core_logic_v2/: agent_core_v2.py  agent_instance_manager.py  dialog_log.py  dialog_log_v2.py  exception.py  interrupt.py  interrupt_utils.py  prompt_builder.py  resume_dolphin_agent_run.py  resume_handler.py  run_dolphin.py
agent-backend/agent-executor/app/logic/tool/: parse_temporary_file.py
agent-backend/agent-executor/app/models/: tool_requests.py  tool_responses.py
agent-backend/agent-executor/app/resources/data/: sensitive_words.txt
agent-backend/agent-executor/app/router/: tool_controller.py
agent-backend/agent-executor/app/utils/: common.py  interrupt_converter.py
agent-backend/agent-executor/app/utils/observability/: observability_log.py  observability_trace.py  sdk_available.py  trace_wrapper.py
agent-backend/agent-executor/conf/: agent-executor.yaml.example
agent-backend/agent-executor/data_migrations/init/agents/: DocQA_Agent.py  PyCodeGenerate_Agent.py  README.md
agent-backend/agent-executor/data_migrations/init/tools/: built_in_tools.py  tool_box_configs.py
agent-backend/agent-executor/docs/logging/: console_logger_error_usage.md  struct_logger_usage.md
agent-backend/agent-executor/docs/mq-dependencies/: mq-so-dependencies.md
agent-backend/agent-executor/test/common_test/: test_struct_logger.py
agent-backend/agent-executor/test/common_test/errors_test/: test_exceptions.py
agent-backend/agent-executor/test/driven_test/: test_open_doc_service.py
agent-backend/agent-executor/test/logic_test/retriever_test/: retrival_overall_ut.py
agent-backend/agent-executor/test/unit/common_test/: __init__.py  test_api_tool.py  test_exception_logger.py  test_exceptions.py  test_struct_logger.py  test_tool.py
agent-backend/agent-executor/test/unit/config_test/: test_app_config.py  test_config.py  test_config.py.bak2  test_config_initializer_v2.py  test_config_loader.py  test_config_loader_extended.py  test_database_config.py  test_document_config.py  test_feature_config.py  test_memory_config.py  test_observability_config.py  test_service_config.py
agent-backend/agent-executor/test/unit/domain_test/: __init__.py  test_agent_input_vo.py  test_agent_option_vo.py  test_cache_entities.py
agent-backend/agent-executor/test/unit/driven_test/: test_agent_factory_service.py  test_embedding_client.py
agent-backend/agent-memory/: Makefile  pyproject.toml  pytest.ini  requirements-dev.txt
agent-backend/agent-memory/src/: main.py
agent-backend/agent-memory/src/config/: config.py  config.yaml
agent-backend/agent-memory/src/utils/: i18n.py
agent-backend/agent-memory/tests/: README.md
agent-backend/agent-memory/tests/unit/: test_config.py  test_main.py
data-retrieval/: .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  README.pypi.md  README.zh-CN.md  api.json  pyproject.toml  requirements.txt
data-retrieval/chart/: Chart.yaml
data-retrieval/data-retrieval/tests/mcp_test/: client_example.py  test_identity_params.py  test_stdio_client.py  test_with_preset_params.py
data-retrieval/docs/: data_model_service_usage.md  sandbox_session_management.md  sql_helper_usage.md  tools_usage_guide.md
data-retrieval/examples/: dip_metric_cache_demo.py  sql_helper_example.py
data-retrieval/helm/data-retrieval/: Chart.yaml  values.yaml
data-retrieval/helm/data-retrieval/templates/: configmap.yaml  deployment.yaml
data-retrieval/scripts/: generate_api_docs.py
data-retrieval/src/data_retrieval/: __init__.py  errors.py  settings.py
data-retrieval/src/data_retrieval/api/: ad_api.py  af_api.py  agent_retrieval.py  base.py  data_model.py  error.py  knowledge_network.py  vega.py
data-retrieval/src/data_retrieval/datasource/: __init__.py  af_indicator.py  api_base.py  base.py  db_base.py  dimension_reduce.py  dip_dataview.py  dip_metric.py  sqlite_ds.py  vega_connector.py  vega_datasource.py
data-retrieval/src/data_retrieval/logs/: logger.py
data-retrieval/src/data_retrieval/parsers/: base.py  text2metric_parser.py  text2sql_parser.py
data-retrieval/src/data_retrieval/prompts/: __init__.py  base.py
data-retrieval/src/data_retrieval/sessions/: __init__.py  base.py  in_memory_session.py  redis_session.py  redis_session_dl.py
data-retrieval/src/data_retrieval/tools/: __init__.py  base.py  registry.py  tool_api_router.py
data-retrieval/src/data_retrieval/utils/: __init__.py  _common.py  convert.py  deprecated.py  embeddings.py  func.py  id_gen.py  llm.py  load_test.py  model_types.py  ranking.py  redis_client.py  sql_to_graph.py  stop_word.py
data-retrieval/tests/: run_all_tests.py  test_api.py  test_parsers.py  test_prompts.py  test_sessions.py  test_settings.py  test_tools.py  test_tools_without_prompt_manager.py  test_utils.py
data-retrieval/tests/mcp_test/: __init__.py  client_example.py  test_ptc_registry.py  test_streamable_client.py
data-retrieval/tests/unit_tests/: __init__.py  run_all_tests.py  test_api.py  test_dip_dataview.py  test_knowledge_network.py  test_parsers.py  test_prompts.py  test_sessions.py  test_settings.py  test_sqlite_ds.py  test_tool_api_router.py  test_tools.py  test_utils.py
(+2052 files in other folders)
