[build-system]
requires = ["setuptools"]

[project]
name = "kweaver-data-retrieval"
version = "0.1.3"
authors = [
  { name="Chen Xiao", email="xavier.chen@aishu.cn" },
]
description = "A library for Kweaver data retrieval"
readme = "README.pypi.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
  "Jinja2==3.1.3",
  "langchain==0.2.1",
  "langchain_community==0.2.1",
  "langchain_core==0.2.3",
  "langchain_openai==0.1.8",
  "Requests==2.32.3",
  "aiohttp==3.12.0",
  "pydantic==2.11.5",
  "pandas==2.2.2",
  "async-timeout==4.0.3",
  "urllib3==2.1.0",
  "tabulate==0.9.0",
  "redis==5.0.8",
  "pydantic-settings==2.12.0",
  "sqlparse==0.5.1",
  "sql_metadata==2.13.0",
  "pyahocorasick==2.0.0",
  "jieba==0.42.1",
  "faiss-cpu>=1.8",
  "fastapi>=0.115.0",
  "kweaver-sandbox-runtime==0.1.1",
  "uvicorn>=0.27.0",
  "openai>=1.68.2",
  "httpx==0.27.2",
  "sqlglot[rs]==26.21.0",
  "rank-bm25==0.2.2",
  "circuitbreaker>=2.0.0"
]

[project.optional-dependencies]
linux = [
  "gunicorn>=21.2.0"
]
windows = []
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.23.0",
  "flake8>=7.0.0",
  "autopep8>=2.0.0",
  "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
"data_retrieval.prompts.tools_prompts.text2metric_prompt" = ["params_json.txt"]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # 行长由 line-length 控制
